--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,6 @@
 {
     "routes": [
-      { "src": "^/$", "dest": "/Frontend/homepage.html" }
+      { "src": "^/$", "dest": "/Frontend/templates/pages/homepage.html" }
     ]
   }
   
