--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "node -r esm server.js"
   },
   "repository": {
     "type": "git",
@@ -22,6 +22,7 @@
     "axios": "^1.6.1",
     "body-parser": "^1.20.2",
     "express": "^4.18.2",
-    "firebase": "^10.6.0"
+    "firebase": "^10.6.0",
+    "esm": "^3.2.25"
   }
 }
